# simd_sample

./: .gitignore  Makefile.am  README.md  configure.ac  mix.exs
config/: config.exs  target.exs
lib/: simd_sample.ex
lib/simd_sample/: application.ex  gamma.ex  monochrome_filter.ex  sin.ex
m4/: ax_gcc_x86_cpu_supports.m4
native/: alignas.h  alignof.h  aos0.c  aos0.h  basic.h  basic_intrinsics.c  basic_intrinsics.h  inline.h  intrinsics.h  libgamma.c  libmonochrome_filter.c  libnif.c  libsin.c  mm256_extract_epi64_set_to_m256.c  mm256_extract_epi64_set_to_m256.h  mm256_round_cvtps_epi32.c  mm256_round_cvtps_epi32.h  mm256_unsigned_extend_epi64_to_m256.c  mm256_unsigned_extend_epi64_to_m256.h  mm256_unsigned_extend_epi8_to_epi32.c  mm256_unsigned_extend_epi8_to_epi32.h  monochrome_filter_1.h  rgb_t.h  soa0.c  soa0.h  soa1.c  soa1.h
native/arm/: monochrome_filter_1.c  monochrome_filter_1.s
native/x86_64/: monochrome_filter_1.c
samples/: benchmarks.exs  gamma_benchmarks.exs  monochrome_benchmarks.exs  sin_benchmarks.exs
test/: simd_sample_test.exs
